--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.7.0</version>
         <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
     </plugins>
@@ -54,5 +54,17 @@
   		<groupId>org.springframework </groupId>
   		<artifactId>spring-webmvc</artifactId>
   	</dependency>
+  	<dependency>   
+  		<groupId>junit</groupId>   
+  		<artifactId>junit</artifactId>   
+  		<version>[4.12,]</version>   
+  		<scope>test</scope> 
+  	</dependency> 
+	<dependency>
+		<groupId>org.mockito</groupId>
+		<artifactId>mockito-all</artifactId>
+		<version>[1.10, 1.99]</version>
+		<scope>test</scope>
+	</dependency>
   </dependencies>
 </project>
