commit met data validatie

--- a/src/main/resources/teksten.properties
+++ b/src/main/resources/teksten.properties
@@ -1,1 +1,5 @@
 aantalFilialen={0} filialen
+required=verplicht in te vullen
+typeMismatch.java.lang.Integer=tik een getal
+typeMismatch.java.time.LocalDate=tik een datum
+typeMismatch.java.math.BigDecimal=tik een bedrag
