--- a/pom.xml
+++ b/pom.xml
@@ -66,5 +66,16 @@
 		<version>[1.10, 1.99]</version>
 		<scope>test</scope>
 	</dependency>
+	<dependency>   
+		<groupId>org.hibernate</groupId>   
+		<artifactId>hibernate-validator</artifactId>   
+		<version>[5.4, 5.4.99]</version> 
+	</dependency>
+	<dependency>   
+		<groupId>org.jsoup</groupId>   
+		<artifactId>jsoup</artifactId>   
+		<version>[1.10,]</version>   
+		<scope>runtime</scope> 
+	</dependency>
   </dependencies>
 </project>
