--- a/pom.xml
+++ b/pom.xml
@@ -77,5 +77,9 @@
 		<version>[1.10,]</version>   
 		<scope>runtime</scope> 
 	</dependency>
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-jdbc</artifactId>
+	</dependency>
   </dependencies>
 </project>
