--- a/pom.xml
+++ b/pom.xml
@@ -81,5 +81,16 @@
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-jdbc</artifactId>
 	</dependency>
+	<dependency>   
+		<groupId>org.springframework</groupId>   
+		<artifactId>spring-test</artifactId>   
+		<scope>test</scope> 
+	</dependency> 
+	<dependency>
+		<groupId>mysql</groupId>
+		<artifactId>mysql-connector-java</artifactId>
+		<version>[5.1,5.99]</version> 
+		<scope>test</scope> 
+	</dependency>
   </dependencies>
 </project>
