--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,12 @@
 	</dependency>
 	<dependency>
 		<groupId>org.springframework</groupId>
-		<artifactId>spring-jdbc</artifactId>
+		<artifactId>spring-orm</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>org.hibernate</groupId>
+		<artifactId>hibernate-core</artifactId>
+		<version>[5.2.10, 5.2.99]</version>
 	</dependency>
 	<dependency>   
 		<groupId>org.springframework</groupId>   
