commit met testen met een in-memory database

--- a/pom.xml
+++ b/pom.xml
@@ -87,14 +87,21 @@
 		<version>[5.2.10, 5.2.99]</version>
 	</dependency>
 	<dependency>   
-		<groupId>org.springframework</groupId>   
-		<artifactId>spring-test</artifactId>   
+		<groupId>com.h2database</groupId>   
+		<artifactId>h2</artifactId>   
+		<version>[1.4,]</version>   
 		<scope>test</scope> 
 	</dependency> 
-	<dependency>
-		<groupId>mysql</groupId>
-		<artifactId>mysql-connector-java</artifactId>
-		<version>[5.1,5.99]</version> 
+	<dependency>   
+		<groupId>javax.el</groupId>   
+		<artifactId>javax.el-api</artifactId>   
+		<version>[3,]</version>   
+		<scope>test</scope> 
+	</dependency> 
+	<dependency>   
+		<groupId>el-impl</groupId>   
+		<artifactId>el-impl</artifactId>   
+		<version>1.0</version>   
 		<scope>test</scope> 
 	</dependency>
 	<dependency>
