--- a/pom.xml
+++ b/pom.xml
@@ -109,5 +109,42 @@
 		<artifactId>spring-data-jpa</artifactId>
 		<version>[1.11,1.99]</version>
 	</dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-test</artifactId>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+    	<groupId>com.fasterxml.jackson.core</groupId>   
+    	<artifactId>jackson-databind</artifactId>   
+    	<version>[2.8.8, 2.8.99]</version> 
+    </dependency>
+    <dependency>   
+    	<groupId>org.springframework.hateoas</groupId>   
+    	<artifactId>spring-hateoas</artifactId>   
+    	<version>[0.23,]</version> 
+    </dependency>
+    <dependency>
+    	<groupId>org.springframework.plugin</groupId>
+    	<artifactId>spring-plugin-core</artifactId>
+    	<version>[1.2,]</version>
+    	<scope>runtime</scope>
+    </dependency>
+    <dependency>   
+    	<groupId>com.jayway.jsonpath</groupId>   
+    	<artifactId>json-path</artifactId>   
+    	<version>[2.2,]</version>   
+    	<scope>test</scope> 
+    </dependency>
+    <dependency>   
+    	<groupId>javax.mail</groupId>   
+    	<artifactId>mail</artifactId>   
+    	<version>[1,]</version> 
+    </dependency>
+    <dependency>   
+    	<groupId>org.springframework</groupId>   
+    	<artifactId>spring-context-support</artifactId>   
+    	<scope>runtime</scope> 
+    </dependency>
   </dependencies>
 </project>
