--- a/pom.xml
+++ b/pom.xml
@@ -146,5 +146,24 @@
     	<artifactId>spring-context-support</artifactId>   
     	<scope>runtime</scope> 
     </dependency>
+    <dependency>   
+    	<groupId>org.springframework</groupId>   
+    	<artifactId>spring-jms</artifactId> 
+    </dependency>
+    <dependency>   
+    	<groupId>org.apache.activemq</groupId>   
+    	<artifactId>activemq-spring</artifactId>   
+    	<version>5.15.0</version> 
+    </dependency>
+    <dependency>   
+    	<groupId>org.springframework.security</groupId>   
+    	<artifactId>spring-security-config</artifactId>   
+    	<version>4.2.3.RELEASE</version> 
+    </dependency> 
+    <dependency>   
+    	<groupId>org.springframework.security</groupId>   
+    	<artifactId>spring-security-taglibs</artifactId>   
+    	<version>4.2.3.RELEASE</version> 
+    </dependency>
   </dependencies>
 </project>
