--- a/src/main/resources/mail.properties
+++ b/src/main/resources/mail.properties
@@ -1,6 +1,6 @@
 mailserver.host=smtp.gmail.com
 mailserver.port=465
 mailserver.protocol=smtps
-mailserver.username=kazekage422@gmail.com
-mailserver.password=G@@r@119
-webmaster=chelo.pablo@gmail.com
+mailserver.username=ashlynnnorico@gmail.com
+mailserver.password=luffykulet
+webmaster=kazekage422@gmail.com
