--- a/pom.xml
+++ b/pom.xml
@@ -165,5 +165,10 @@
     	<artifactId>spring-security-taglibs</artifactId>   
     	<version>4.2.3.RELEASE</version> 
     </dependency>
+    <dependency>   
+    	<groupId>org.aspectj</groupId>   
+    	<artifactId>aspectjweaver</artifactId>   
+    	<version>[1.8,]</version> 
+    </dependency> 
   </dependencies>
 </project>
